--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   min-height: calc(100vh - 25px);
-  padding: 5px;
+  padding: 0 0 10px 0;
 }
 
 main {
