--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ main {
   padding: 5px;
 }
 
+h1::first-letter {
+  color: #81A0A0;
+  font-size: 125%;
+}
+
 hr {
   height: 1px;
   background: #000;
